added failsafe plugin